--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+    <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -23,21 +23,15 @@
 <section><h1  id="first">Quel avenir pour la voiture à Paris?</h1></section>
 <section>
   <h1 class="title">Pourquoi?</h1>
-  <p class="description">Bouger, se déplacer, voyager… Acquise au fur et à mesure de l’évolution et de la démocratisation des transports,
-    la mobilité est une liberté dont personne ne voudrait être privé. Récemment, la hausse du prix du carburant amène les Français à se poser
-    la question de leurs déplacements : sommes-nous prêts à nous passer d’une voiture individuelle, si pratique ? <br><br>
-Alors que 89% des Parisiens affirment avoir le choix entre plusieurs moyens de transport selon l’INSEE,
-on constate effectivement que l’usage de la voiture est à la marge de celui des transports en communs.
-Avec le taux d’équipement le plus faible de France (36,8% contre 86% en Pays de la Loire), uniquement 13% de Parisiens se rendent au travail en voiture. <br><br>
-Dans une ville qui laisse de plus en plus de place aux autres modes de transport, il semble légitime de se poser la question de l’avenir de la voiture à Paris.
-Et pour mieux l’anticiper, nous proposons de nous intéresser à son évolution sur les dernières années, tout en y intégrant la notion de la pollution de l’air.
-</p>
+  <p class="description">Bouger, se déplacer, voyager… Acquise au fur et à mesure de l’évolution et de la démocratisation des transports, la mobilité est une liberté dont personne ne voudrait être privé. Récemment, la hausse du prix du carburant amène les Français à se poser la question de leurs déplacements : sommes-nous prêts à nous passer d’une voiture individuelle, si pratique ? <br>
+  Alors que 89% des Parisiens affirment avoir le choix entre plusieurs moyens de transport selon l’INSEE, on constate effectivement que l’usage de la voiture est à la marge de celui des transports en communs. Avec le taux d’équipement le plus faible de France (36,8% contre 86% en Pays de la Loire), uniquement 13% de Parisiens se rendent au travail en voiture. <br>
+  Dans une ville qui laisse de plus en plus de place aux autres modes de transport, il semble légitime de se poser la question de l’avenir de la voiture à Paris. Et pour mieux l’anticiper, nous proposons de nous intéresser à son évolution sur les dernières années, tout en y intégrant la notion de la pollution de l’air. <br>
+
+  </p>
 </section>
 <section>
   <h1 class="title">Moins de voitures circulent à Paris en 2017 qu'en 2014</h1>
-  <p class="description">
-    Débit  (nombre de voitures qui passe la boucle par heure)<br>Après une augmentation continue du débit routier depuis 2013, celui-ci chute brutalement en 2017. Les voies sur berge ont été officiellement rendue piétonnes cette
-  même année. Faut-il voir une causalité?</p>
+  <p class="description">Après une augmentation continue du débit routier depuis 2013, celui-ci chute brutalement en 2017. Les voies sur berge ont-été officiellement rendue piétonnes cette même année. Faut-il y voir une causalité par effet de découragement ?</p>
 
 <div class="placeholders">
   <script type='text/javascript' src='tableau.js'></script>
@@ -57,11 +51,8 @@ Et pour mieux l’anticiper, nous proposons de nous intéresser à son évolutio
 </section>
 <section>
   <h1 class="title">...Ce qui se ressent sur la densité du trafic</h1>
-  <p class="description">Taux (temps de présence d’un véhicule sur la boucle en pourcentage d’une heure)
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p class="description">Contrairement aux idées reçues, le trafic routier est moins dense en 2017 qu’en 2016. La piétonnisation de certains axes n’a donc pas créé d’embouteillages supplémentaires aux moyennes des années précédentes.
+</p>
 
 <div class="placeholders">
   <script type='text/javascript' src='tableau.js'></script>
@@ -81,18 +72,16 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 </section>
 <section>
   <h1 class="title">En parallèle, la qualité de l'air parisien de cesse de s'améliorer depuis 5 ans</h1>
-  <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p class="description">Et cela malgré l’augmentation continue du trafic routier jusqu’à 2016... <br>
+Comment est-ce possible ? <br>
+L’adoption de plus en plus large de véhicules propres, nourrie par une politique publique volontariste, semble avoir contribué à une lutte efficace contre la pollution de l’air de capitale.
+</p>
   <img src="pollution.png" alt="pollution paris" class="evolution">
 </section>
 <section>
   <h1 class="title">Les axes les plus denses sont-ils les plus pollués?</h1>
-  <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p class="description">Sans surprise, les axes les plus encombrés de la capitale demeurent les plus touchés par la pollution aux particules fines.
+</p>
     <div class="box">
       <ul>
         <li id="tab-one" class="active">
@@ -191,9 +180,10 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
     </div>
 </section>
 <section>
-  <h1 class="title">Comprendre les usagers</h1>
-  <p class="description">Les automobilistes utilisent leurs voitures pour se rendre au travail.
-    Cela explique pourquoi le trafic chute radicalement les week-ends et en été.</p>
+  <h1 class="title">Que représenre ce trafic?</h1>
+  <p class="description">Très concrètement, il s’agit en grande partie de personnes qui utilisent leur voiture pour se rendre au travail. Cela explique pourquoi le trafic chute radicalement les week-ends et en été.<br>
+Quelles alternatives pourrions-nous leur proposer pour diminuer le trafic et les aider à économiser en carburant ?
+</p>
     <div class="schema">
       <script type='text/javascript' src='tableau.js'></script>
       <div class='tableauPlaceholder2'>
@@ -225,16 +215,13 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 </section>
 <section>
   <h1 class="title">Comment débloquer le trafic et préserver notre atmosphère?</h1>
-  <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-    sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-    sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-    sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+  <p class="description">La Mairie de Paris envisage une disparition des voitures à essence d’ici 2030. <br>
+Voici quelques pistes pour s’y préparer :<br>
+
+Passer dès maintenant à l’électrique → connaître les aides proposées par la Mairie <br>
+Recourir au covoiturage pour se rendre au travail → rechercher un trajet en Ile de France <br>
+Se mettre au vélo → là encore, la Mairie peut vous aider !
+ </p>
 </section>
 <section>
   <h1 class="title">Fin</h1>
@@ -248,3 +235,4 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 
 </body>
 </html>
+
