--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@ Quelles alternatives pourrions-nous leur proposer pour diminuer le trafic et les
 <p class="description">La Mairie de Paris envisage une disparition des voitures à essence d’ici 2030. <br> <br>
 Voici quelques pistes pour s’y préparer :<br> <br>
 
-Passer dès maintenant à l’électrique → connaître les aides proposées par la Mairie <br> <br>
-Recourir au covoiturage pour se rendre au travail → rechercher un trajet en Ile de France <br> <br>
-Se mettre au vélo → là encore, la Mairie peut vous aider !
+Passer dès maintenant à l’électrique → <a href="https://www.paris.fr/recharge">connaître les aides proposées par la Mairie</a>  <br> <br>
+Recourir au covoiturage pour se rendre au travail → <a href="https://www.idvroom.com/covoiturage-region/trajet-ile-de-france">rechercher un trajet en Ile de France </a> <br> <br>
+Se mettre au vélo → <a href="https://www.paris.fr/services-et-infos-pratiques/deplacements-et-stationnement/deplacements/lutte-contre-la-pollution-les-aides-a-la-mobilite-5373">là encore, la Mairie peut vous aider !</a>
 </p>
 </section>
 <section>
